add documentation for login
